<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <TextView
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_number"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_count"
            android:text="中奖次数"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/tv_flag"
            android:text="盈利冲刺系数"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <!--总金额-->
    <TextView
        android:layout_margin="10dp"
        android:text="剩余￥3000"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/tv_cash"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <EditText
          android:layout_marginRight="5dp"
          android:hint="@string/et_put_number"
          android:id="@+id/et_put_number"
          android:inputType="number"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <EditText
          android:layout_marginRight="5dp"
          android:hint="@string/et_put"
          android:id="@+id/et_put"
          android:inputType="number"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <Button
          android:text="@string/btn_confirm"
          android:id="@+id/btn_confirm"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>



  </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/btn_confirm2"
            android:id="@+id/btn_confirm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_auto_put"
            android:text="全自动增额投注"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_net"
            android:text="保本自动投注"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>